# provenact-spec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_PROVENACT_RENAME_2026-02-10.md  README.md  SECURITY.md  SPEC.md  TODO.md  package-lock.json  package.json
.github/workflows/: conformance.yml  rust-conformance.yml  sync-parity.yml
crates/inactu-conformance-harness/: Cargo.toml  README.md
crates/inactu-conformance-harness/src/: lib.rs  main.rs
crates/inactu-spec-rs/: Cargo.toml  README.md
crates/inactu-spec-rs/src/: lib.rs
crates/inactu-spec-validate/: Cargo.toml  README.md
crates/provenact-conformance-harness/: Cargo.toml  README.md
crates/provenact-conformance-harness/src/: lib.rs  main.rs
crates/provenact-spec-rs/: Cargo.toml  README.md
crates/provenact-spec-validate/: Cargo.toml  README.md
docs/: compatibility-matrix.md  remediation-execution-board.md  repo-remediation-backlog.md  rust-crates.md  source-of-truth-sync-policy.md
spec/: README.md  compatibility.md  conformance.md  hashing.md  install.md  packaging.md  threat-model.md  v0.md
spec/install/: README.md  index.schema.json  meta.schema.json
spec/policy/: capability-evaluation.md  policy.md  policy.schema.json
spec/registry/: registry.md
spec/rfcs/: execution-receipt-v1.md  skill-manifest-v1.md
spec/v0/: pipeline.schema.json  skill-manifest.schema.json
test-vectors/: README.md
test-vectors/capability-eval/: basic.json  normalization-boundary.json
tools/: check-sync-parity.sh  generate-sync-manifest.sh  run-conformance.mjs
(+23 files in other folders)
