[workspace]
members = [
  "crates/provenact-spec-rs",
  "crates/provenact-spec-validate",
  "crates/provenact-conformance-harness",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
hex = "0.4"
jsonschema = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
url = "2.5"
walkdir = "2"
