[package]
name = "provenact-conformance-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "provenact-conformance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
provenact-spec-rs = { path = "../provenact-spec-rs" }
provenact-spec-validate = { path = "../provenact-spec-validate" }
serde_json.workspace = true
walkdir.workspace = true
